--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Yanyan Li (李言)
+title: Yan (Yanyan) Li
 author:
-  name: Contact Yanyan
-  email: yanyan.li.camp@gmail.com
+  name: Contact Yan Li (李言)
+  email: yan.li@nus.edu.sg
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
