--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Yan (Yanyan) Li
+title: Yan Li (李言)
 author:
-  name: Contact Yan Li (李言)
+  name: Contact Yan Li 
   email: yan.li@nus.edu.sg
 
 # The `>` after `description:` means to ignore line-breaks until next key.
